# promptgate

./: .gitignore  .gitleaks.toml  CHANGELOG.md  DECISIONS.md  LICENSE  ProjectRequirements.txt  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: generate.py  results.md  run.py
benchmarks/transcripts/: transcript_1.json  transcript_2.json  transcript_3.json
src/promptgate/: __init__.py  _console.py  counters.py  formats.py  gate.py  report.py  safety.py  scrub.py
src/promptgate/strategies/: __init__.py  tool_truncate.py  window.py
tests/: test_console.py  test_counters.py  test_formats.py  test_gate.py  test_properties.py  test_report.py  test_safety.py  test_scrub.py
tests/strategies/: test_tool_truncate.py  test_window.py
