[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptgate"
version = "0.1.0"
description = "A prompt firewall: compress conversation history and scrub secrets/PII before they reach an LLM API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "promptgate contributors" }]
keywords = ["llm", "prompt", "tokens", "privacy", "secrets", "pii", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
openai = ["tiktoken>=0.5"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/core-labs-io/promptgate"
Repository = "https://github.com/core-labs-io/promptgate"
Issues = "https://github.com/core-labs-io/promptgate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/promptgate"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["promptgate"]
